--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -20008,6 +20008,12 @@ a.text-dark:hover {
     content: "\f1f2"
 }
 
+.logo_cover {
+    margin-top: auto;
+    width: 300px;
+    height: 120px
+}
+
 .icon-cc-amex:before {
     content: "\f1f3"
 }
