--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -24058,12 +24058,12 @@ a.text-dark:hover {
 
 body {
     color: #86939e;
-    font-family: Roboto, sans-serif, serif;
-    font-size: 14px;
-    height: 100%;
-    line-height: 1.5;
-    font-weight: 300;
-    letter-spacing: .2px;
+    font-family: Roboto, sans-serif, serif !important;
+    font-size: 14px !important;
+    height: 100% !important;
+    line-height: 1.5 !important;
+    font-weight: 300 !important;
+    letter-spacing: .2px !important;
     padding-right: 0!important
 }
 
