--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -15,6 +15,19 @@ button.tabella
     border-top: 1px solid #e1e8ee !important;
 }
 
+textarea#avviso {
+    width: 100%;
+    height: 300px;
+    margin-bottom: 20px;
+}
+
+input[type="submit"] {
+    float: right;
+}
+
+.avviso {
+   margin: 15px;
+}
 
 button.esci
 {
