--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -370,6 +370,15 @@ progress {
     -webkit-appearance: none
 }
 
+input#titolo {
+    width: 100%;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    border: solid 1px #333333;
+    padding: 10px;
+    background: #f9f9f9;
+}
+
 [type=search]::-webkit-search-decoration {
     -webkit-appearance: none
 }
