--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -19,6 +19,8 @@ textarea#avviso {
     width: 100%;
     height: 300px;
     margin-bottom: 20px;
+    padding: 10px;
+    border-radius: 5px;
 }
 
 input[type="submit"] {
